# mcpbin

./: .dockerignore  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PRD.md  README.md  SECURITY.md  hatch_build.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-hf.yml  release.yml
.kittify/: config.yaml  metadata.yaml
deploy/huggingface/: Dockerfile  README.md  SETUP.md
frontend/: app.js  index.html  style.css
kitty-specs/mcpbin-deployment-01KV19VJ/: data-model.md  lanes.json  meta.json  plan.md  quickstart.md  research.md  spec.md  status.events.jsonl  status.json  tasks.md
kitty-specs/mcpbin-deployment-01KV19VJ/checklists/: requirements.md
kitty-specs/mcpbin-deployment-01KV19VJ/contracts/: deployment-surface.md  release-workflow.md  smoke-check.md
kitty-specs/mcpbin-deployment-01KV19VJ/tasks/: README.md  WP01-release-ci.md  WP02-smoke-check.md  WP03-hf-space-docs.md
kitty-specs/mcpbin-test-server-01KTYJ79/: data-model.md  lanes.json  meta.json  plan.md  quickstart.md  research.md  spec.md  status.events.jsonl  status.json  tasks.md
kitty-specs/mcpbin-test-server-01KTYJ79/checklists/: requirements.md
kitty-specs/mcpbin-test-server-01KTYJ79/contracts/: meta-schema.json  prompts.md  protocol.md  resources.md  tools.md
kitty-specs/mcpbin-test-server-01KTYJ79/tasks/: README.md  WP01-scaffolding.md  WP02-core-primitives.md  WP03-server-transports.md  WP04-echo-tools.md  WP05-response-types.md  WP06-error-tools.md  WP07-delay-tools.md  WP08-schema-tools.md  WP09-notification-tools.md  (+6 more)
scripts/: smoke_check.py
src/mcpbin/: __init__.py  _meta.py  errors.py  pagination.py  profiles.py  prompts.py  registry.py  resources.py  server.py  session.py
tests/: conftest.py  test_core.py  test_delays.py  test_echo.py  test_errors.py  test_inspect.py  test_integration.py  test_meta_contract.py  test_notifications.py  test_pagination.py  test_profiles.py  test_prompts.py  test_resources.py  test_response_types.py  test_sampling.py  test_schema.py  test_server.py
(+12 files in other folders)
