[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcpbin"
version = "0.1.3"
description = "A diagnostic test server for Model Context Protocol (MCP) clients — like httpbin for REST APIs — with predictable, documented responses for every protocol feature."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Ruhulla Sheik" }]
keywords = ["mcp", "fastmcp", "testing", "diagnostics", "httpbin"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]

# FastMCP is the ONLY third-party runtime dependency (C-003).
dependencies = ["fastmcp>=2.0"]

[project.scripts]
# Entry point per C-006. References mcpbin.server:main, which is created in WP03;
# it is only invoked at runtime, so the package still imports/builds without it.
mcpbin = "mcpbin.server:main"

# Dev-only deps (not runtime deps, so C-003 still holds).
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcpbin"]

# Ship the repo-root frontend/ into the wheel under mcpbin/frontend/ (and the
# bundled src/mcpbin/assets/ travels with the package automatically). The frontend
# is authored by a later work package (WP14); a static force-include would fail
# when the directory is absent, so the conditional build hook below injects the
# force-include only when frontend/ exists. WP03/WP14 resolve the runtime path via
# importlib.resources on the `mcpbin.frontend` / `mcpbin.assets` package data.
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
include = [
    "src/mcpbin",
    "frontend",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
